--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/ico" href="./src/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Demonstração do portfólio de Gabriel Ávila"/>
-    <title>Vite + React</title>
+    <title>Gabriel Ávila</title>
   </head>
   <body>
     <div id="root"></div>
