--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <!-- GA4 click event -->
+  <script>
+    document.getElementById('visitLink').addEventListener('click', function(){ gtag('event', 'visitLink', {'debug_mode': true})})
+  </script>
 </html>
